# misfit

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
src/misfit/reference/: ref_envZ.fasta  ref_ftsI.fasta  ref_mrdA.fasta  ref_ompC.fasta  ref_ompF.fasta  ref_ompR.fasta  ref_phoE.fasta
src/misfit/scripts/: kleborate_aligner_core.py  misfit.py
