[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "misfit"
version = "0.0.1"
description = "MISFIT: Mutation Identification Suite for Intrinsic Traits – a flexible intrinsic mutation analysis tool."
readme = "README.md"
requires-python = ">=3.9"

[[project.authors]]
name = "William Shropshire"
email = "wcshropshire@mdanderson.org"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/wshropshire/misfit"
Repository = "https://github.com/wshropshire/misfit"

# Command-line entry points
[project.scripts]
misfit = "misfit.scripts.misfit:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
misfit = ["bin/**", "binaries/**", "reference/**", "scripts/**"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["misfit*"]

[tool.setuptools.dynamic.version]
attr = "misfit.scripts.__init__.__version__"
